python/python-flask-tls/client/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 5001
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    app: client
spec:
  containers:
  - name: client
    image: us.icr.io/datashield-core/client
    ports:
    - containerPort: 5001
