python/python-flask-tls/client/sgx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-flask-client-service-sgx
  labels:
    app: python-flask-client-sgx
spec:
  type: NodePort
  selector:
    app: python-flask-client-sgx
  ports:
  - protocol: TCP
    port: 5001
    nodePort: 32701
